--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,22 @@ name = "stderr"
 version = "0.1.0"
 authors = ["biluohc <biluohc@outlook.com>"]
 
+# A short blurb about the package. This is not rendered in any format when
+# uploaded to crates.io (aka this is not markdown).
+description = "A stderr ouput library usage like print!/println!. "
+
+# These URLs point to more information about the repository.
+# documentation = "..."
+# homepage = "..."
+repository = "https://github.com/biluohc/stderr"
+
+# This points to a file in the repository (relative to this `Cargo.toml`). The
+# contents of this file are stored and indexed in the registry.
+# readme = "..."
+
+keywords = ["stderr"]
+
+license = "MIT"
+
 [dependencies]
+
