--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "stderr"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["biluohc <biluohc@outlook.com>"]
 
 # A short blurb about the package. This is not rendered in any format when
 # uploaded to crates.io (aka this is not markdown).
-description = "A stderr output library usage like print!/println!. "
+description = "A library that using macro to write io::stderr() like print!/println!."
 
 # These URLs point to more information about the repository.
 # documentation = "..."
@@ -14,9 +14,9 @@ repository = "https://github.com/biluohc/stderr"
 
 # This points to a file in the repository (relative to this `Cargo.toml`). The
 # contents of this file are stored and indexed in the registry.
-# readme = "..."
+readme = "readme.md"
 
-keywords = ["stderr"]
+keywords = ["err","err!","errst","errstln!","stderr","macro","print","print!","print!","println!"]
 
 license = "MIT"
 
