--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,22 @@
 [package]
 name = "stderr"
-version = "0.3.0"
+version = "0.5.0"
 authors = ["biluohc <biluohc@outlook.com>"]
 
-# A short blurb about the package. This is not rendered in any format when
-# uploaded to crates.io (aka this is not markdown).
-description = "A library that using macro to write to io::stderr() like print!/println!."
+description = "A library that using macro to write io::stderr() for error or io::stdout() for log optional like print!/println!."
 
-# These URLs point to more information about the repository.
 # documentation = "..."
 # homepage = "..."
 repository = "https://github.com/biluohc/stderr"
 
-# This points to a file in the repository (relative to this `Cargo.toml`). The
-# contents of this file are stored and indexed in the registry.
 readme = "readme.md"
 
-keywords = ["err","errst","macro","print"]
+keywords = ["err","errst","log","debug","print"]
 
 license = "MIT"
 
 [dependencies]
 
+[[test]]
+name ="main"
+path="tests/main.rs"
