--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "stderr"
 version = "0.8.0"
-authors = ["biluohc <biluohc@outlook.com>"]
+authors = ["Wspsxing <biluohc@outlook.com>"]
 
 description = "A library that using macro to write to io::stderr() like print!()/println!()."
 # homepage = "..."
 documentation = "https://docs.rs/stderr/"
 repository = "https://github.com/biluohc/stderr"
 readme = "readme.md"
-keywords = ["err","errst","log","debug","print"]
+keywords = ["err","errst","log","static","print"]
 license = "MIT"
 
 [badges]
